[package]
name = "mincat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincat-macro = { path = "../mincat-macro" }
matchit = "0.7.3"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
bytes = "1.5.0"
async-trait = "0.1.77"
hyper = { version = "1.1.0", features = ["full"] }
mime = "0.3.17"
