[package]
name = "mincat-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for mincat"
license = "GPL-3.0"
repository = "https://github.com/ES1993/mincat"
keywords = ["http", "web", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincat-macro = { path = "../mincat-macro", version = "*" }
matchit = "0.7.3"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
bytes = "1.5.0"
async-trait = "0.1.77"
mime = "0.3.17"
futures-util = "0.3.30"
pin-project-lite = "0.2.13"
sync_wrapper = "0.1.2"
