[package]
name = "mincat-macro"
version = "0.1.0"
edition = "2021"
description = "macro for mincat"
license = "GPL"
repository = "https://github.com/ES1993/mincat"
keywords = ["http", "web", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["full"]}
quote = "1.0.35"
proc-macro2 = "1.0.78"
