[package]
name = "mincat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincat-core = { path = "../mincat-core" }
mincat-macro = { path = "../mincat-macro" }
http = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
