[package]
name = "mincat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
session = []

[dependencies]
mincat-core = { path = "../mincat-core" }
mincat-macro = { path = "../mincat-macro" }
http = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
async-trait = "0.1.77"
matchit = "0.7.3"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
mime = "0.3.17"
multer = "3.0.0"
multer-derive = "0.1.1-alpha"
cookie = { version = "0.18.0", features = ["percent-encode", "private"] }
uuid = "1.7.0"
