[package]
name = "mincat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
session = ["dep:uuid", "cookie-private"]
session-memory = ["session"]
session-redis = ["session", "dep:redis", "dep:redis_pool"]
session-postgres = ["session", "dep:sqlx", "sqlx/postgres"]
cookie = ["dep:cookie"]
cookie-private = ["cookie", "cookie?/private"]
cookie-signed = ["cookie", "cookie?/signed"]

[dependencies]
mincat-core = { path = "../mincat-core" }
mincat-macro = { path = "../mincat-macro" }
http = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
async-trait = "0.1.77"
matchit = "0.7.3"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
mime = "0.3.17"
multer = "3.0.0"
multer-derive = "0.1.1-alpha"
cookie = { version = "0.18.0", features = [
    "percent-encode",
    "private",
], optional = true }
uuid = { version = "1.7.0", features = ["v4"], optional = true }
derive_builder = "0.13.0"
chrono = "0.4.33"
redis = { version = "0.24.0", optional = true }
redis_pool = { version = "0.3.0", features = ["cluster"], optional = true }
sqlx = { version = "0.7.3", features = ["runtime-tokio"], optional = true }
