[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincat = { path = "../../mincat", features = [
    "session-memory",
    "session-redis",
    "session-postgres",
] }
tokio = { version = "1.35.1", features = ["full"] }
