[package]
name = "session"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincat = { path = "../../mincat", features = [
    "session",
    "session-memory",
    "session-redis",
    "session-postgres",
    "session-mysql",
] }
tokio = { version = "1.35.1", features = ["full"] }
